test: migrate JavaFX tests from TestFX