@@ -31,9 +31,6 @@ testModuleInfo {
     requires("org.mockito")
     requires("org.hamcrest")
 
-    requires("org.testfx")
-    requires("org.testfx.junit5")
-
     requires("com.tngtech.archunit")
     requires("com.tngtech.archunit.junit5.api")
 
@@ -297,11 +294,11 @@ tasks.named("check") {
 }
 
 tasks.test {
+    systemProperty("glass.platform", "Headless")
+    systemProperty("prism.order", "sw")
+
     jvmArgs = listOf(
         "-javaagent:${configurations.mockitoAgent.get().asPath}",
-
-        // Source: https://github.com/TestFX/TestFX/issues/638#issuecomment-433744765
-        "--add-opens", "javafx.graphics/com.sun.javafx.application=org.testfx",
 
         "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
         "--add-opens", "java.base/java.nio=org.apache.pdfbox.io",
